--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <nav class="nav">
             <ul class="contenedorLinks">
-                <li><a class="link activo" href="#sectionConferencia">La conferencia</a></li>
+                <li><a class="link activo" href="#">La conferencia</a></li>
                 <li><a class="link pasivo" href="#sectionOradores">Los oradores</a></li>
                 <li><a class="link pasivo" href="#sectionLugarFecha">El lugar y la fecha</a></li>
                 <li><a class="link pasivo" href="#sectionFormularioOrador">Conviértete en orador</a></li>
@@ -110,7 +110,7 @@
                 </div>
                 <div></div>
                 <div>
-                    <input type="submit" value="Enviar">
+                    <input type="submit" value="Enviar" role="button">
                 </div>
             </form>
         </section>
