--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -22,7 +22,7 @@
                 <li><a class="link pasivo" href="../index.html#sectionOradores">Los oradores</a></li>
                 <li><a class="link pasivo" href="../index.html#sectionLugarFecha">El lugar y la fecha</a></li>
                 <li><a class="link pasivo" href="../index.html#sectionFormularioOrador">Conviértete en orador</a></li>
-                <li><a class="link especial" href="#">Comprar tickets</a></li>
+                <li><a class="link especialTickets" href="#">Comprar tickets</a></li>
             </ul>
         </nav>
     </header>
